--- a/backend/package.json
+++ b/backend/package.json
@@ -23,9 +23,11 @@
     "@langchain/core": "^0.3.0",
     "@langchain/google-genai": "^0.1.12",
     "@langchain/openai": "^0.3.0",
+    "@types/pdfkit": "^0.17.3",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.0",
     "langchain": "^0.3.0",
+    "pdfkit": "^0.17.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
